--- a/style.css
+++ b/style.css
@@ -53,7 +53,14 @@ p {
   padding: .3rem;
   border-radius: 3px;
 }
+
 .list__buttons > i:nth-child(2) {
+  background-color: #00acc1;
+  padding: .3rem;
+  border-radius: 3px;
+}
+
+.list__buttons > i:nth-child(3) {
   background-color: #d81b60;
   padding: .3rem;
   border-radius: 3px;
